--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
 Flask==0.10.1
+Flask-Migrate==1.4.0
 Flask-SQLAlchemy==2.0
+Flask-Script==2.0.5
 Flask-WTF==0.11
 Jinja2==2.7.3
+Mako==1.0.1
 MarkupSafe==0.23
 SQLAlchemy==1.0.4
 WTForms==2.0.2
 Werkzeug==0.10.4
+alembic==0.7.6
 argparse==1.2.1
 distribute==0.6.24
 itsdangerous==0.24
@@ -15,4 +19,5 @@ oauthlib==0.7.2
 rauth==0.7.1
 requests==2.7.0
 requests-oauthlib==0.5.0
+uWSGI==2.0.10
 wsgiref==0.1.2
